make nav responsive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 </head>
 
 <body>
-  <div class="absolute flex flex-row justify-end items-center w-full absolute h-10 bg-white/30">
+  <div
+    class="absolute flex flex-row justify-center md:justify-end items-center w-full absolute h-10 bg-black/10 md:bg-white/30">
     <div class="flex flex-row gap-10 mx-10">
       <a class="lato-bold text-md hover:text-white" href="#">Home</a>
       <a class="lato-bold text-md hover:text-white" href="#">Menu</a>
