close gaps for mobile

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <img class="w-full h-dvh min-h-194 ml-auto object-cover" src="./public/img/header_image_original.png" />
     </div>
   </div>
-  <div class="flex flex-col items-center min-h-170 bg-lime-200/80 gap-2 mb-20 mt-5">
+  <div class="flex flex-col items-center min-h-170 bg-lime-200/80 gap-2 md:mb-20 md:mt-5">
     <h1 class="jua-regular text-black/80 text-7xl xl:text-8xl mt-20">Ingredients</h1>
     <div class="flex flex-col gap-6 mt-6 mb-16 md:flex-row">
       <div class="flex flex-col items-center gap-7">
@@ -99,7 +99,7 @@
       </div>
     </div>
   </div>
-  <div class="bg-rose-200 flex flex-col mb-20">
+  <div class="bg-rose-200 flex flex-col md:mb-20">
     <div class="columns-1 gap-20 flex flex-col items-center md:columns-2 md:items-start md:flex-row">
       <img class="md:relative md:bottom-10 w-1/1 max-w-160 h-160 object-cover" src="public/img/menu_spring-rolls.png" />
       <div class="w-full h-auto flex flex-row items-center justify-center p-6 pb-20  md:min-h-160">
@@ -115,7 +115,8 @@
     </div>
 
     <div class="columns-1 flex flex-col items-center md:columns-2 md:items-start md:flex-row">
-      <div class="order-1 w-full h-auto flex flex-row items-center justify-center p-6 pb-20 md:min-h-160 md:order-0">
+      <div
+        class="order-1 w-full h-auto flex flex-row items-center justify-center md:p-6 md:pb-20  md:min-h-160 md:order-0">
         <p class=" text-center md:text-left text-black/40 lato-light text-3xl leading-11 max-w-160">
           Discover the flavors of our signature fermented pork salad, ยำแหนม. This dish is not only delicious but also
           conveniently long-lasting. Whenever hunger strikes, simply grab, mix, and enjoy—it's that easy! As part of our
