close gaps for mobile

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
   <div
     class="absolute flex flex-row justify-center md:justify-end items-center w-full absolute h-10 bg-black/10 md:bg-white/30">
     <div class="flex flex-row gap-10 mx-10">
-      <a class="lato-bold text-md hover:text-white" href="#">Home</a>
-      <a class="lato-bold text-md hover:text-white" href="#">Menu</a>
-      <a class="lato-bold text-md hover:text-white" href="#">Contact</a>
+      <a class="lato-bold text-md text-black/60 hover:text-white" href="#">Home</a>
+      <a class="lato-bold text-md text-black/60 hover:text-white" href="#">Menu</a>
+      <a class="lato-bold text-md text-black/60 hover:text-white" href="#">Contact</a>
     </div>
   </div>
 
@@ -116,7 +116,7 @@
 
     <div class="columns-1 flex flex-col items-center md:columns-2 md:items-start md:flex-row">
       <div
-        class="order-1 w-full h-auto flex flex-row items-center justify-center md:p-6 md:pb-20  md:min-h-160 md:order-0">
+        class="order-1 w-full h-auto flex flex-row items-center justify-center p-6 md:pb-20  md:min-h-160 md:order-0">
         <p class=" text-center md:text-left text-black/40 lato-light text-3xl leading-11 max-w-160">
           Discover the flavors of our signature fermented pork salad, ยำแหนม. This dish is not only delicious but also
           conveniently long-lasting. Whenever hunger strikes, simply grab, mix, and enjoy—it's that easy! As part of our
@@ -257,6 +257,15 @@
             <!-- <p class="text-red-500 text-xs italic">Please fill out this field.</p> -->
           </div>
         </div>
+
+        <div class="md:ml-auto flex flex-col items-center">
+          <button
+            class="shadow bg-rose-400 hover:bg-rose-200 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+            type="button">
+            Send to order
+          </button>
+        </div>
+
 
       </div>
       </form>
