--- a/index.html
+++ b/index.html
@@ -128,11 +128,12 @@
     </div>
   </div>
 
-  <div class="bg-white flex flex-col">
+  <div class="bg-lime-200/80 flex flex-col">
     <div class="columns-1 flex flex-col items-center md:columns-2 md:items-start md:flex-row">
-      <img class="w-1/1 max-w-160 h-160 object-cover" src="public/img/menu_rice-balls.png" />
+      <img class="md:relative md:bottom-10 w-1/1 max-w-160 h-160 object-cover" src="public/img/menu_rice-balls.png" />
       <div class="w-full h-auto flex flex-row items-center justify-center p-6 pb-8 md:pb-26 md:min-h-160">
-        <p class="text-center md:text-left text-black/40 lato-light text-4xl leading-11 max-w-160">
+        <p
+          class="text-center md:text-left text-black/40 lato-light text-4xl lg:text-5xl leading-11 lg:leading-15 md:pt-16 max-w-160">
           Experience the authentic taste of Thailand with our signature rice balls, known as 'คลุก.' Handcrafted with
           care, these flavorful delights combine perfectly cooked rice with a medley of fresh herbs, spices, and
           traditional ingredients.
@@ -140,14 +141,15 @@
       </div>
     </div>
 
-    <div class="columns-1 flex flex-col items-center md:columns-2 md:items-start md:flex-row md:my-10">
+    <div class="columns-1 flex flex-col items-center md:columns-2 md:items-start md:flex-row md:my-6">
       <div class="order-1 w-full h-auto flex flex-row items-center justify-center p-6 md:min-h-160 md:order-0">
-        <p class="text-center md:text-left text-black/40 lato-light text-4xl leading-11 max-w-160">
+        <p
+          class="text-center md:text-left text-black/40 lato-light text-4xl lg:text-5xl leading-11 lg:leading-15 max-w-160">
           Our thoughtfully designed packaging ensures your food stays fresh and flavorful, preserving its quality from
           our kitchen to your doorstep. Durable and secure, it's perfect for shipping.
         </p>
       </div>
-      <img class="w-1/1 max-w-160 h-160 object-cover" src="public/img/menu_packaging.png" />
+      <img class="md:relative md:top-13 w-1/1 max-w-160 h-160 object-cover" src="public/img/menu_packaging.png" />
     </div>
   </div>
 
